dashboard-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: dashboard-ingress
  namespace: kubernetes-dashboard
spec:
  rules:
  - host: dashboard.com
    http: 
      parths: 
      - backend:
          serviceName: kubernetes-dashboard
          servicePort: 80
